<resources>
    <string name="app_name">Metron</string>
    <string name="sharedPrefKey">sharedPref</string>
    <string name="profile_pln_id">ID PLN: %1$s</string>
    <string name="profile_pdam_id">ID PDAM: %1$s</string>
    <string name="welcome">Welcome, %1$s</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sample_photo">Sample Photo</string>
    <string name="camera_button">Camera Button</string>
    <string name="home">Beranda</string>
    <string name="history">Riwayat</string>
    <string name="profile">Profil</string>
    <string name="pdam">PDAM</string>
    <string name="pln">PLN</string>
    <string name="lapor">Lapor</string>
    <string name="kirim">Kirim</string>
    <string name="nomor_pln">Nomor PLN</string>
    <string name="nomor_pdam">Nomor PDAM</string>
    <string name="email">Email</string>
    <string name="registrasi">Registrasi</string>
    <string name="coba_lagi">Coba lagi</string>
    <string name="kembali">Kembali</string>
    <string name="simpan_gagal">Penyimpanan gagal</string>
    <string name="tidak_ada_riwayat">Tidak ada riwayat</string>
    <string name="lapor_pln">Lapor PLN</string>
    <string name="lapor_pdam">Lapor PDAM</string>
    <string name="top_news_untuk_kamu">Top News untuk kamu</string>
    <string name="info_pemadaman_listrik">Info Pemadaman Listrik</string>
    <string name="_15_menit_lalu">15 menit lalu</string>
    <string name="akan_dilakukan_jadwal_pemadaman_listrik_wilayah_ulp_kebumen_rabu_2_6_dan_kamis_3_6_mulai_pukul_09_00_s_d_15_00_wib_di_kecamaatan_padureso_karangsambung_prembun_dan_bonorowo">Akan dilakukan jadwal pemadaman listrik wilayah ULP, Kebumen, Rabu(2/6) dan Kamis(3/6) mulai Pukul 09.00 s/d 15.00 WIB di Kecamaatan Padureso, Karangsambung, Prembun dan Bonorowo</string>
    <string name="name">Name</string>
    <string name="pln_id">PLN ID</string>
    <string name="pdam_id">PDAM ID</string>
    <string name="phone">phone</string>
    <string name="reminder_notification">Reminder Notification</string>
    <string name="logout">Logout</string>
    <string name="splash_screen">splash screen</string>
    <string name="move">move</string>
    <string name="langkah_langkah_pelaporan_pln">Langkah-Langkah Pelaporan PLN</string>
    <string name="mengunggah_foto_meteran">Mengunggah foto meteran</string>
    <string name="unggah_foto_meteran_anda_melalui_kamera_galeri_dengan_klik_tombol_ikon_kamera">Unggah foto meteran anda melalui kamera, galeri dengan klik tombol ikon kamera.</string>
    <string name="_1">1</string>
    <string name="potong_foto_di_bagian_digit_meteran">Potong foto di bagian digit meteran</string>
    <string name="potong_foto_unggahan_anda_sehingga_memuat_6_buah_digit_meteran_listrik">Potong foto unggahan Anda sehingga memuat 6 buah digit meteran listrik.</string>
    <string name="_2">2</string>
    <string name="image_example">image example</string>
    <string name="tekan_tombol_lapor_atau_foto_ulang">Tekan tombol lapor atau foto ulang</string>
    <string name="jika_digit_yang_terdeteksi_sudah_benar_tekan_tombol_lapor_sebaliknya_silahkan_coba_menggungah_ulang">Jika digit yang terdeteksi sudah benar tekan tombol lapor, sebaliknya silahkan coba menggungah ulang</string>
    <string name="_3">3</string>
    <string name="terbaca_angka">Terbaca Angka</string>
    <string name="langkah_langkah_pelaporan_pdam">Langkah-Langkah Pelaporan PDAM</string>
    <string name="potong_foto_unggahan_anda_sehingga_memuat_7_digit_meteran_air">Potong foto unggahan Anda sehingga memuat 7 digit meteran air.</string>
    <string name="success_image">success image</string>
    <string name="fail_image">fail image</string>
    <string name="angka">Angka</string>
    <string name="data_penggunaan_listrik_berhasil_tersimpan">Data penggunaan listrik berhasil tersimpan</string>
    <string name="thumbnail">thumbnail</string>
    <string name="air_pdam_tirta_benteng_tak_mengalir_selama_tiga_tahun">Air PDAM Tirta Benteng Tak Mengalir Selama Tiga Tahun</string>
    <string name="jakarta_ombudsman_ri_perwakilan_sumatera_utara_sumut_telah_menerima_39_laporan_warga_soal_lonjakan_tagihan_air_pdam_tirtanadi_yang_dianggap_tidak_wajar_ombudsman_sumut_bakal_memanggil_pimpinan_perusahaan_air_itu_untuk_dimintai_klarifikasinya">Jakarta - Ombudsman RI Perwakilan Sumatera Utara (Sumut) telah menerima 39 laporan warga soal lonjakan tagihan air PDAM Tirtanadi yang dianggap tidak wajar. Ombudsman Sumut bakal memanggil pimpinan perusahaan air itu untuk dimintai klarifikasinya...</string>
    <string name="rabu_06_januari_2021">Rabu, 06 Januari 2021</string>
    <string name="baca_lebih_lanjut">Baca Lebih Lanjut</string>
    <string name="logo">logo</string>
    <string name="no_id">No ID</string>
    <string name="timestart">Timestart</string>
    <string name="timeend">Timeend</string>
</resources>